--- a/guessthebrand.html
+++ b/guessthebrand.html
@@ -1,7 +1,7 @@
 <!--
 SENG 513
-Due October 23rd 2023
-Assignment 2
+Due November 6th 2023
+Assignment 3
 Muhammad Taimur Rizwan
 UCID: 30078941 
 -->
