--- a/guessthebrand.html
+++ b/guessthebrand.html
@@ -8,28 +8,41 @@ UCID: 30078941
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags for character set and viewport settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Link to JavaScript -->
     <script defer src="script.js"></script>
+    <!-- Title -->
     <title>Guess The Car Brand Game</title>
 </head>
 <body>
+    <!-- Game Overview Information -->
     <div id="game-overview">
         <h1>Guess The Car Brand</h1>
         <h2>Target Platform: Puzzle</h2>
         <h2>Objective & Rules: Guess the car brand by entering a letter!</h2>
     </div>
-
+<!-- User Interaction and Game Controls -->
     <div id="user-interaction">
+        <!-- Display of the word to be guessed -->
         <p id="word-display">Letter entry</p>
+        <!-- Prompt for the current player to enter a letter -->
         <p id="word-display"> Player <span id="current-player">1</span>, Enter one letter:</p>
+        <!-- Input field for the player to enter a letter -->
         <input type="text" id="letter-input" maxlength="1">
+        <!-- Button to submit the guessed letter -->
         <button onclick="submit()">Submit Guess</button>
+        <!-- Display of incorrect guesses count -->
         <p>Incorrect guesses: <span id="incorrect-guesses">0</span></p>
+        <!-- Button to start a new game -->
         <button onclick="start()">New Game</button>
+        <!-- Display of player scores -->
         <p id="score">Player 1: <span id="player1-score">0</span> | Player 2: <span id="player2-score">0</span></p>
     </div>
+    <!-- Placeholder for the hangman figure -->
     <div id="hangman-figure"></div> 
 </body>
 </html>
